objects/DecsOnD__ConfigurationSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store Decisions on Demand configuration settings</description>
    <fields>
        <fullName>DecsOnD__ElementName__c</fullName>
        <description>User interface (or other) element to which the setting applies. For instance the name of a table column</description>
        <label>Element</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DecsOnD__Object__c</fullName>
        <description>Name of the object to which the setting applies</description>
        <label>Object Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__PolicyName__c</fullName>
        <description>Name of the policy to which the setting applies</description>
        <label>Policy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__SettingType__c</fullName>
        <description>Type of the setting, for instance &quot;ColumnWidth&quot;</description>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__TableName__c</fullName>
        <description>Name of the decision table to which the setting applies</description>
        <label>Table</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__UserId__c</fullName>
        <label>User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Value__c</fullName>
        <description>Setting Value, for instance &quot;200px&quot; for the width of a column</description>
        <label>Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Decisions on Demand Configuration</label>
    <listViews>
        <fullName>DecsOnD__All</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__ElementName__c</columns>
        <columns>DecsOnD__External_ID__c</columns>
        <columns>DecsOnD__Object__c</columns>
        <columns>DecsOnD__PolicyName__c</columns>
        <columns>DecsOnD__SettingType__c</columns>
        <columns>DecsOnD__TableName__c</columns>
        <columns>DecsOnD__UserId__c</columns>
        <columns>DecsOnD__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DecsOnD__OrganizationWide</fullName>
        <columns>DecsOnD__SettingType__c</columns>
        <columns>DecsOnD__Object__c</columns>
        <columns>DecsOnD__PolicyName__c</columns>
        <columns>DecsOnD__TableName__c</columns>
        <columns>DecsOnD__ElementName__c</columns>
        <columns>DecsOnD__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SETUP_TYPE</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filters>
        <label>Organization-wide</label>
    </listViews>
    <listViews>
        <fullName>DecsOnD__UserSpecific</fullName>
        <columns>SETUP_TYPE</columns>
        <columns>DecsOnD__SettingType__c</columns>
        <columns>DecsOnD__Object__c</columns>
        <columns>DecsOnD__PolicyName__c</columns>
        <columns>DecsOnD__TableName__c</columns>
        <columns>DecsOnD__ElementName__c</columns>
        <columns>DecsOnD__Value__c</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SETUP_TYPE</field>
            <operation>notEqual</operation>
            <value>Organization</value>
        </filters>
        <label>User-specific</label>
    </listViews>
</CustomObject>